--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Main
-MODULE_NAME='module'
-DEBUG='ndk:*,module:*'
+MODULE_NAME='halving-massacre'
+DEBUG='ndk:*,halving-massacre:*'
 
 # Express HTTP Server
 PORT=3000
@@ -11,5 +11,13 @@ NOSTR_PUBLIC_KEY="The public key associated to the private key"
 NOSTR_RELAYS="wss://relay.damus.io,wss://relay.hodl.ar,wss://nostr.wine,wss://offchain.pub,wss://nostr-pub.wellorder.net,wss://nos.lol"
 NOSTR_WRITE_RELAY=""
 
+
 # Postgres settings
 DATABASE_URL="postgresql://root:root@localhost:5432/lawallet-extension"
+
+# Mempool
+MEMPOOL_WS_URL="wss://mempool.space/api/v1/ws"
+
+#Lawallet
+BTC_GATEWAY_PUBLIC_KEY="The public key associated to the private key"
+LW_API_ENDPOINT="https://api.lawallet.ar"
