Listen for zapReceipts and add power to players

--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,6 @@ DATABASE_URL="postgresql://root:root@localhost:5432/lawallet-extension"
 MEMPOOL_WS_URL="wss://mempool.space/api/v1/ws"
 
 #Lawallet
-BTC_GATEWAY_PUBLIC_KEY="The public key associated to the private key"
+BTC_GATEWAY_PUBLIC_KEY="The public key associated to the btc gateway"
+LEDGER_PUBLIC_KEY="The public key associated to the ledger"
 LW_API_ENDPOINT="https://api.lawallet.ar"
