--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "LaWallet Module",
   "main": "dist/index.mjs",
   "module": "dist/index.mjs",
+  "type": "module",
   "types": "dist/index.d.ts",
   "files": [
     "./dist/index.mjs",
@@ -18,7 +19,7 @@
     "test:v": "DEBUG='*,-babel jest --verbose' DOTENV_CONFIG_PATH=.env.test jest --runInBand",
     "test:watch": "DOTENV_CONFIG_PATH=.env.test jest --watch",
     "dev": "concurrently \"pnpm run build:watch\" \"pnpm run dev:watch\"",
-    "dev:watch": "nodemon --watch \"dist/**/*\" -w .env -r dotenv/config -e mjs ./dist/index.mjs",
+    "dev:watch": "nodemon --watch \"dist/**/*\" -w .env -r dotenv/config -e mjs ./dist/index.js",
     "build": "node ./build.mjs && pnpm run build:types",
     "build:prod": "node ./build.mjs",
     "build:types": "tsc --build --verbose ./tsconfig.build.json",
@@ -39,26 +40,26 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@lawallet/module": "~0.4.0",
-    "@nostr-dev-kit/ndk": "^2.4.0",
+    "@nostr-dev-kit/ndk": "^2.6.1",
     "@prisma/client": "5.11.0",
     "debug": "^4.3.4",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "fs": "0.0.1-security",
-    "glob": "^10.3.10",
-    "nostr-tools": "^2.1.5",
+    "glob": "^10.3.12",
+    "nostr-tools": "npm:@lawallet/nostr-tools@^1.17.0",
     "websocket-polyfill": "^0.0.3",
     "ws": "^8.16.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@swc/cli": "^0.3.9",
-    "@swc/core": "^1.4.0",
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.4.11",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
     "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.12.3",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.10",
@@ -66,21 +67,23 @@
     "@typescript-eslint/parser": "^6.21.0",
     "chokidar": "^3.6.0",
     "concurrently": "^8.2.2",
-    "esbuild": "^0.20.0",
-    "eslint": "^8.56.0",
+    "esbuild": "^0.20.2",
+    "esbuild-ts-paths": "^1.1.3",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^27.6.3",
+    "eslint-plugin-jest": "^27.9.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.3",
+    "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
-    "prisma": "^5.11.0",
+    "prisma": "^5.12.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-jest-mock-import-meta": "^1.2.0",
-    "typescript": "^5.3.3"
+    "tsc-alias": "^1.8.8",
+    "typescript": "^5.4.3"
   },
   "overrides": {
     "nostr-tools": "npm:@lawallet/nostr-tools"
