--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "3.8"
 services:
   postgres:
-    container_name: postgres
+    container_name: massacre_postgres
     image: postgres:15
     restart: always
     environment:
       DATABASE_HOST: localhost
       POSTGRES_USER: root
-      POSTGRES_PASSWORD: root
-      POSTGRES_DB: lawallet-extension
+      POSTGRES_PASSWORD: massacre
+      POSTGRES_DB: halving-massacre
     ports:
-      - 5432:5432
+      - 5433:5432
 
   app:
     build:
@@ -22,6 +22,6 @@ services:
       - ./.env
     environment:
       NODE_ENV: production
-      DATABASE_URL: "postgresql://root:root@postgres/lawallet-extension"
+      DATABASE_URL: "postgresql://root:massacre@postgres:5432/halving-massacre"
     depends_on:
       - postgres
