--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ NOSTR_PRIVATE_KEY="YOUR_NOSTR_PRIVATE_KEY"
 NOSTR_PUBLIC_KEY="The public key associated to the private key"
 NOSTR_RELAYS="wss://relay.damus.io,wss://relay.hodl.ar,wss://nostr.wine,wss://offchain.pub,wss://nostr-pub.wellorder.net,wss://nos.lol"
 NOSTR_WRITE_RELAY=""
+LAWALLET_RELAY=""
 
 
 # Postgres settings
