--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "module",
+  "name": "halving-massacre",
   "version": "0.1.0",
-  "description": "LaWallet Module",
+  "description": "Backend module for managing halving massacre games",
   "main": "dist/index.mjs",
   "module": "dist/index.mjs",
   "type": "module",
