--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ MEMPOOL_WS_URL="wss://mempool.space/api/v1/ws"
 BTC_GATEWAY_PUBLIC_KEY="The public key associated to the btc gateway"
 LEDGER_PUBLIC_KEY="The public key associated to the ledger"
 LW_API_ENDPOINT="https://api.lawallet.ar"
+
+# Onchain
+ADDRESS_PRICE_MILLISATS="1000"
