--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,29 @@ services:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: massacre
       POSTGRES_DB: halving-massacre
-    ports:
-      - 5433:5432
-
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U root -h localhost -d halving-massacre"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 360s
+  massacre-migrate:
+    image: node:18-alpine3.16
+    container_name: massacre-migrate
+    environment:
+      DATABASE_URL: postgresql://root:massacre@massacre_postgres/halving-massacre
+    entrypoint: [ 'sh', '-c', 'cd code && npm install --no-save --quiet prisma@5.12.0 && npx prisma migrate deploy']
+    volumes:
+      - ./prisma:/code/prisma
+    depends_on:
+      postgres:
+        condition: service_healthy
   app:
+    container_name: halving-massacre
+    restart: always
     build:
       context: ./
       target: runner
-    ports:
-      - 3000:3000
     env_file:
       - ./.env
     environment:
