--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,4 @@ LW_API_ENDPOINT="https://api.lawallet.ar"
 # Onchain
 ONCHAIN_ADDRESS_PRICE_MILLISATS="1000"
 ONCHAIN_ZPUB_KEY="ZPUB_BIP84_KEY"
+CRYPTOAPIS_API_KEY="CRYPTOAPIS.IO_API_KEY"
