--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@lawallet/module": "~0.8.3",
     "@nostr-dev-kit/ndk": "^2.7.1",
     "@prisma/client": "5.12.1",
+    "bip84": "^0.2.7",
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
