--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clean": "rm -rf dist .coverage",
     "reset": "pnpm clean && rm -rf node_modules && rm -f pnpm-lock.yaml",
     "lint": "eslint src tests --fix; prisma validate",
-    "prettier": "prettier src tests --write; prisma format",
+    "prettier": "prettier src tests --no-error-on-unmatched-pattern --write; prisma format",
     "prisma:migrate": "prisma migrate dev"
   },
   "keywords": [],
