--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["./tests/**/*", "./src/**/*", "./build.js", "./jest.config.js"]
+  "include": ["./tests/**/*", "./src/**/*", "./build.mjs", "./jest.config.cjs"]
 }
